# ml_template_poetry_hydra_dvc

./: .gitignore  dvc.yaml  pyproject.toml
conf/: config.yaml
conf/hydra/job_logging/: custom.yaml
notebooks/: ejemplo.ipynb
src/olist_ml/: config.py  main.py
src/olist_ml/data/: __init__.py  extract.py  save.py  transform.py
